packages/errors/test/__snapshots__/NO_SPECS_FOUND - noPattern.ansi
[31mCan't run because [95mno spec files[39m[31m were found.[39m
[31m[39m
[31mWe searched for specs inside of this folder:[39m
[31m[39m
[31m[90m  > [39m[31m[94m/path/to/project/root[39m[31m[39m